--- a/src/lab_6_part2.Rmd
+++ b/src/lab_6_part2.Rmd
@@ -61,7 +61,86 @@ sbc_rast <- raster(here('data/county.tif'))
 plot(sbc_rast)
 plot(ls_3)
 mask(ls_3, sbc_rast) %>% plot()
+
+ls_3 <- mask(ls_3, sbc_rast)
+ls_4 <- mask(ls_4, sbc_rast)
 ```
+
+# working with rasters
+
+## Raster algebra
+
+```{r}
+vec1 <- 1:5
+vec1
+vec1*2
+
+ls_3
+ls_3 *2
+plot(ls_3); plot(log(ls_3))
+```
+
+```{r}
+vec2 <- 6:10
+vec1+vec2
+ls_3 + ls_4
+```
+
+## `raster::calc()`
+
+```{r}
+ls_stack <- stack(ls_1, ls_2, ls_3, ls_4)
+ls_mean <- raster::calc(ls_stack, fun = mean, na.rm = FALSE)
+
+plot(ls_mean)
+```
+# Analysis
+
+## NDVI
+
+```{r}
+knitr::include_graphics('img/spectrum.png')
+
+knitr::include_graphics('img/ir_photo.jpg')
+```
+
+$$NDVI = \frac{NIR - Red}{NIR + Red}$$
+```{r}
+ndvi <- (ls_4 - ls_3) / (ls_4 + ls_3)
+
+plot(ndvi, col = hcl.colors(100, 'Grays'))
+
+is_forest <- function(x, thresh = .3) {
+  y <- ifelse(x >= thresh, 1, NA)
+  return(y)
+}
+
+forest <- calc(ndvi, fun = is_forest)
+
+plot(forest, col = 'green')
+```
+
+# `ggplot` and rasters
+```{r}
+ndvi_df <- raster::rasterToPoints(ndvi) %>% 
+  as.data.frame()
+forest_df <- raster::rasterToPoints(forest) %>% 
+  as.data.frame()
+
+ggplot(data = ndvi_df, aes(x = x, y = y, fill = layer)) +
+  geom_raster() +
+  geom_raster(data = forest_df, fill = 'green') +
+  coord_sf(expand = 0) +
+  scale_fill_gradient(low = 'black', high = 'white') +
+  theme_void() +
+  theme(panel.background = element_rect(fill = 'slateblue4'))
+```
+
+
+
+
+
+
 
 
 
